[tool.poetry]
name = "jsondb"
version = "0.1.0"
description = "JSON DB"
authors = ["Dan Park <dan.park.primary@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
black = "^24.4.2"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-s", "--cov=jsondb", "--cov-report=term-missing", "--cov-fail-under=80"]
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    .eggs
    | .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | build
    | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
